jumping scrollbar fix

--- a/src/style/cmps/_AppHeader.scss
+++ b/src/style/cmps/_AppHeader.scss
@@ -15,7 +15,7 @@
         @include flex-center;
         position: absolute;
         top: 94px;
-        left: 50%;
+        left: 50vw;
         transform: translateX(-50%);
         width: 326px;
         height: 326px;
