--- a/src/style/cmps/_FactsList.scss
+++ b/src/style/cmps/_FactsList.scss
@@ -49,7 +49,7 @@
         border-bottom: 1px solid #b3bec2;
         align-items: center;
         grid-template-rows: 44px;
-        transition: .3s;
+        transition: .4s;
 
         span {
             padding-left: 12px;
@@ -64,7 +64,7 @@
             grid-column: 1 / -1;
             background-color: #eff4f7;
             padding: 52px 144px 52px 144px;
-            transition: .3s;
+            transition: .4s;
 
             .img-container {
                 background-color: #eff4f7;
