--- a/src/style/setup/_base.scss
+++ b/src/style/setup/_base.scss
@@ -5,6 +5,7 @@
 html {
     font-family: Roboto;
     line-height: 1.8;
+    margin-left: calc(100vw - 100%);
 }
 
 body {
